Temp commit, Spark/Mahout upgrade (I7).